--- a/14 - animated progress bar/index.html
+++ b/14 - animated progress bar/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="progress-base">
-        <div class="progress-bar"></div>
+        <div class="progress-bar stage-1"></div>
     </div>
 </body>
 </html>
